Add question update functionality - mostly stable
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -33,6 +33,10 @@
     <div id="CertForm">
     <form id="myform"></form>
     </div>
+    <div id="CertFormButtons">
+        <button id="btSaveAnswers" class="ui-button ui-widget ui-corner-all">Save Answers</button>
+        <button id="btSaveAndSubmit" class="ui-button ui-widget ui-corner-all">Save and Submit</button>
+    </div>
     <div id="errors"></div>
     <div id="status"></div>
     <div id="login">
