--- a/WebContent/signupsuccess.html
+++ b/WebContent/signupsuccess.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
+    <script src="resources/jquery.jui_dropdown.min.js"></script>
     <script src="resources/certsurvey.js"></script>
-    <script src="resources/jquery.dform-1.1.0.min.js"></script>
   </head>
   <body>
     <div class="navbar" id="topnav">
