Add CSV download feature
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -52,6 +52,14 @@
             </fieldset>
         </form>
     </div>
+    <div id="downloadsurvey">
+        <form name="downloadsurvey-form" id="downloadsurvey-form">
+        <fieldset>
+            <label for="downloadsurvey-version">Specification Version</label>
+            <input type="text" name="downloadsurvey-version" id="downloadsurvey-version" class="text ui-widget-content ui-corner-all">
+        </fieldset>
+        </form>
+    </div>
     <div id="signup">
         <form name="signup-form" id="signup-form">
             <p class="validateTips"></p>
