--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-  <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>OpenChain Self Certification Questions</title>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>OpenChain Self Certification Administration</title>
     <link rel="stylesheet" href="styles/styles.css" type="text/css" media="screen">
     <link rel="stylesheet" href="resources/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
-    <script src="resources/jquery-ui/jquery-ui.min.js"></script> 
+    <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
     <script src="resources/navbar.js"></script>
-    <script src="resources/certsurvey.js"></script>
-    
-  </head>
-  <body>
+    <script src="resources/admin.js"></script>
+</head>
+<body>
     <div class="navbar" id="topnav">
         <div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
         <div id="surveylink" class="navlink" style="float:left"><a href="survey.html"><span class="ui-icon ui-icon-pencil"></span>Conformance Check</a>&nbsp;&nbsp;&nbsp;</div>
@@ -27,17 +26,27 @@
         </div>
     </div>
     <div id="TitleArea">
-        <h1>OpenChain Self Certification Survey</h1>
+        <h1>OpenChain Self Certification Administration</h1>
     </div>
-    <h3>
-        Version <span id="version"></span>
-    </h3>
-    <div id="CertForm">
-    <form id="myform"></form>
+    <h2>Site Status</h2>
+    Site Software Version: <div id="software-version"></div><br />
+    <h2>Submission Status:</h2>
+    <table id="submission-status" class="admin-table ui-corner-all">
+    </table>
+    <h2>
+        Manage Survey Question Content
+    </h2>
+    <div id="manage-survey">
+        <button id="btDownloadSurvey" class="ui-button ui-widget ui-corner-all">Download Survey</button>
+        <button id="btUploadSurvey" class="ui-button ui-widget ui-corner-all">Upload Survey</button>
     </div>
-    <div id="CertFormButtons">
-        <button id="btSaveAnswers" class="ui-button ui-widget ui-corner-all">Save Answers</button>
-        <button id="btSaveAndSubmit" class="ui-button ui-widget ui-corner-all">Save and Submit</button>
+    <div id="downloadsurvey">
+        <form name="downloadsurvey-form" id="downloadsurvey-form">
+        <fieldset>
+            <label for="downloadsurvey-version">Specification Version</label>
+            <input type="text" name="downloadsurvey-version" id="downloadsurvey-version" class="text ui-widget-content ui-corner-all">
+        </fieldset>
+        </form>
     </div>
     <div id="errors"></div>
     <div id="status"></div>
@@ -78,5 +87,5 @@
             </fieldset>
         </form>
     </div>
-  </body>
+</body>
 </html>
