--- a/WebContent/regfailed.html
+++ b/WebContent/regfailed.html
@@ -9,12 +9,13 @@
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
-    <script src="resources/certsurvey.js"></script>
+    <script src="resources/navbar.js"></script>
   </head>
   <body>
     <div class="navbar" id="topnav">
         <div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
         <div id="surveylink" class="navlink" style="float:left"><a href="survey.html"><span class="ui-icon ui-icon-pencil"></span>Conformance Check</a>&nbsp;&nbsp;&nbsp;</div>
+        <div id="adminlink" class="navlink" style="float:left"></div>
         <div id="usermenu" style="float:right;overflow:visible">
             <div id="user-dropdown_container">
                 <button id="user-dropdown_launcher">User Menu</button>
