--- a/WebContent/signupsuccess.html
+++ b/WebContent/signupsuccess.html
@@ -2,19 +2,20 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>OpenChain Self Certification Questions</title>
+    <title>OpenChain Self Certification Sign-up Successful</title>
     <link rel="stylesheet" href="styles/styles.css" type="text/css" media="screen">
     <link rel="stylesheet" href="resources/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="resources/jquery.jui_dropdown.css">
     <script src="resources/jquery-ui/external/jquery/jquery.js"></script>
     <script src="resources/jquery-ui/jquery-ui.min.js"></script>
     <script src="resources/jquery.jui_dropdown.min.js"></script>
-    <script src="resources/certsurvey.js"></script>
+    <script src="resources/navbar.js"></script>
   </head>
   <body>
     <div class="navbar" id="topnav">
         <div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
         <div id="surveylink" class="navlink" style="float:left"><a href="survey.html"><span class="ui-icon ui-icon-pencil"></span>Conformance Check</a>&nbsp;&nbsp;&nbsp;</div>
+        <div id="adminlink" class="navlink" style="float:left"></div>
         <div id="usermenu" style="float:right;overflow:visible">
             <div id="user-dropdown_container">
                 <button id="user-dropdown_launcher">User Menu</button>
@@ -32,7 +33,7 @@
     You should receive an email from [email address] sent to the email specified in the sign-up form.  Click on the link provided to complete the registration process.
     If you do not receive an email, check your spam folder and add [email address] to your trusted email list.
   </body>
-      <div id="errors"></div>
+    <div id="errors"></div>
     <div id="status"></div>
     <div id="login">
         <form>
