Added more testing, added download answers feature, added re-send invitation features, added dependencies for OpenCSV
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/regcomplete.html
+++ b/WebContent/regcomplete.html
@@ -32,6 +32,7 @@
     </div>
     <div id="errors"></div>
     <div id="status"></div>
+    <div id="resendveify"></div>
     <div id="login">
         <form>
             <p class="validateTips"></p>
