--- a/WebContent/signupsuccess.html
+++ b/WebContent/signupsuccess.html
@@ -28,13 +28,14 @@
         <h1>OpenChain Self Certification Signup</h1>
     </div>
     <h2>
-        Sign-up Successful
+        Verification Email
     </h2>
     You should receive an email from [email address] sent to the email specified in the sign-up form.  Click on the link provided to complete the registration process.
     If you do not receive an email, check your spam folder and add [email address] to your trusted email list.
   </body>
     <div id="errors"></div>
     <div id="status"></div>
+    <div id="resendveify"></div>
     <div id="login">
         <form>
             <p class="validateTips"></p>
