--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -38,9 +38,11 @@
     <div id="CertFormButtons">
         <button id="btSaveAnswers" class="ui-button ui-widget ui-corner-all">Save Answers</button>
         <button id="btSaveAndSubmit" class="ui-button ui-widget ui-corner-all">Save and Submit</button>
+        <button id="btDownloadAnswers" class="ui-button ui-widget ui-corner-all">Download Answers</button>
     </div>
     <div id="errors"></div>
     <div id="status"></div>
+    <div id="resendveify"></div>
     <div id="login">
         <form>
             <p class="validateTips"></p>
