--- a/WebContent/regfailed.html
+++ b/WebContent/regfailed.html
@@ -33,6 +33,7 @@
     </div>
     <div id="errors"></div>
     <div id="status"></div>
+    <div id="resendveify"></div>
     <div id="login">
         <form>
             <p class="validateTips"></p>
