Add view certified use case
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -16,6 +16,7 @@
 <body>
     <div class="navbar" id="topnav">
         <div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
+        <div id="certifiedlink" class="navlink" style="float:left"><a href="certified.html"><span class="ui-icon ui-icon-check"></span>Certified Submissions</a>&nbsp;&nbsp;&nbsp;</div> 
         <div id="surveylink" class="navlink" style="float:left"><a href="survey.html"><span class="ui-icon ui-icon-pencil"></span>Conformance Check</a>&nbsp;&nbsp;&nbsp;</div>
         <div id="adminlink" class="navlink" style="float:left"></div>
         <div id="usermenu" style="float:right;overflow:visible">
