Changed question numbering sorting algorithm for the new numbering scheme.  Minor style updates
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,7 +37,7 @@
     <h2>Getting Started</h2>
     To complete the OpenChain Conformance Check, applicants must provide a self-confirmation. The Conformance Check requires you to:
     <ul>
-    <li>Fulfill all requirements set forth in the Specification [LINK to Specification].</li>
+    <li>Fulfill all requirements set forth in the <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-1.0.pdf">Specification.</a></li>
     <li>Create an account by selecting sign-up in the user menu.
     <li>Name a contact person to handle inquiries.</li>
     <li>Have an authorized representative complete the web-based Conformance Check by answering all the questions.</li>
