--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -41,7 +41,9 @@
         <button id="btSaveAnswers" class="ui-button ui-widget ui-corner-all">Save Answers</button>
         <button id="btSaveAndSubmit" class="ui-button ui-widget ui-corner-all">Save and Submit</button>
         <button id="btDownloadAnswers" class="ui-button ui-widget ui-corner-all">Download Answers</button>
+        <button id="btResetAnswers" class="ui-button ui-widget ui-corner-all">Reset</button>
     </div>
+    <div id="oktoreset"></div>
     <div id="errors"></div>
     <div id="status"></div>
     <div id="resendveify"></div>
