Update style/formatting per suggestions from zvr
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <div class="navbar" id="topnav">
+    <!-- 
+        <a href="https://www.openchainproject.org/"><img class="logo" style="float:left; height:40px"></a>
+  -->
         <div id="homelink" class="navlink" style="float:left"><a href="index.html"><span class="ui-icon ui-icon-home"></span>Home</a>&nbsp;&nbsp;&nbsp;</div>        
         <div id="certifiedlink" class="navlink" style="float:left"><a href="certified.html"><span class="ui-icon ui-icon-check"></span>Certified Submissions</a>&nbsp;&nbsp;&nbsp;</div> 
         <div id="surveylink" class="navlink" style="float:left"><a href="survey.html"><span class="ui-icon ui-icon-pencil"></span>Conformance Check</a>&nbsp;&nbsp;&nbsp;</div>
