--- a/WebContent/certified.html
+++ b/WebContent/certified.html
@@ -16,13 +16,13 @@
 <body>
    <div class="navbar" id="topnav"></div>
     <div id="TitleArea">
-        <h1>Certified Organizations</h1>
-        The following organizations [NEED TO ADD TEXT DESCRIPTION]
+        <h1>Conforming Organizations</h1>
+        The following organizations have self-certified conformance to the OpenChain <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-1.0.pdf">Specification.</a>
     </div>
     <div id="status-loading">
         Loading <img src="resources/loading.gif" alt="Loading" class="loading">
     </div>
-    <table id="certified-table" class="admin-table ui-corner-all">
+    <table id="certified-table" class="cert-table ui-corner-all">
     </table>
     <div id="errors"></div>
     <div id="status"></div>
