--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -1,4 +1,9 @@
+<div id="support-email">
+
+</div>
 <div id="copyright">
+    Please contact <a href="mailto:openchain-conformance@linux-foundation.com?Subject=OpenChain%20Certification%20Feedback" target="_top">OpenChain Support</a>
+    to report any inaccuracies or issues.
     <p>Copyright &copy; 2016 The Linux Foundation&reg;. All rights reserved. 
     The Linux Foundation has registered trademarks and uses trademarks. 
     For a list of trademarks of The Linux Foundation, please see our 
