--- a/WebContent/regcomplete.html
+++ b/WebContent/regcomplete.html
@@ -18,7 +18,7 @@
         <h1>Registration Successful</h1>
     </div>
     <div>
-        You are now successfully registered.  Please login using the menu above to continue the self certification.
+        You are now successfully registered.  Please login using the menu above to continue to the self certification.
     </div>
     <div id="errors"></div>
     <div id="status"></div>
