--- a/WebContent/signupsuccess.html
+++ b/WebContent/signupsuccess.html
@@ -20,8 +20,8 @@
     <h2>
         Verification Email
     </h2>
-    You should receive an email from [email address] sent to the email specified in the sign-up form.  Click on the link provided to complete the registration process.
-    If you do not receive an email, check your spam folder and add [email address] to your trusted email list.
+    You should receive an email from no-reply@conformance.openchainproject.org sent to the email specified in the sign-up form.  Click on the link provided to complete the registration process.
+    If you do not receive an email, check your spam folder and add no-reply@conformance.openchainproject.org to your trusted email list.
     <div id="errors"></div>
     <div id="status"></div>
     <div id="resendveify"></div>
