Fix links and emails for final release. Partial (not working) implementation of Yes/No/NotApplicable question types
Signed-off-by: Gary O'Neall <gary@sourceauditor.com>

--- a/WebContent/certified.html
+++ b/WebContent/certified.html
@@ -17,7 +17,7 @@
    <div class="navbar" id="topnav"></div>
     <div id="TitleArea">
         <h1>Conforming Organizations</h1>
-        The following organizations have self-certified conformance to the OpenChain <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-1.0.pdf">Specification.</a>
+        The following organizations have self-certified conformance to the OpenChain <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf">Specification.</a>
     </div>
     <div id="status-loading">
         Loading <img src="resources/loading.gif" alt="Loading" class="loading">
@@ -66,7 +66,7 @@
                     </tr>
                     <tr>
                         <td><input type="checkbox" name="read-terms" id="read-terms" class="ui-widget-content ui-corner-all"></td>
-                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.linuxfoundation.org/terms">Terms of Use</a> and <a href="https://www.linuxfoundation.org/privacy">Privacy Policy</a></label></td>
+                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.openchainproject.org/terms.html">Terms of Use</a> and <a href="https://www.openchainproject.org/privacy.html">Privacy Policy</a></label></td>
                     </tr>
                 </table>
                <!-- Allow form submission with keyboard without duplicating the dialog button -->
