--- a/WebContent/footer.html
+++ b/WebContent/footer.html
@@ -2,12 +2,12 @@
 
 </div>
 <div id="copyright">
-    Please contact <a href="mailto:openchain-conformance@linux-foundation.com?Subject=OpenChain%20Certification%20Feedback" target="_top">OpenChain Support</a>
+    Please contact <a href="mailto:openchain-conformance@lists.linuxfoundation.org?Subject=OpenChain%20Certification%20Feedback" target="_top">OpenChain Support</a>
     to report any inaccuracies or issues.
     <p>Copyright &copy; 2016 The Linux Foundation&reg;. All rights reserved. 
     The Linux Foundation has registered trademarks and uses trademarks. 
     For a list of trademarks of The Linux Foundation, please see our 
     <a href="https://www.linuxfoundation.org/trademark-usage">Trademark Usage</a> page.  
-    Linux is a registered trademark of Linus Torvalds.  <a href="http://www.linuxfoundation.org/privacy">Privacy Policy</a> and
-     <a href="http://www.linuxfoundation.org/terms">Terms of Use</a> </p>    
+    Linux is a registered trademark of Linus Torvalds.  <a href="https://www.openchainproject.org/privacy.html">Privacy Policy</a> and
+     <a href="https://www.openchainproject.org/terms.html">Terms of Use</a> </p>    
 </div>
