--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -25,7 +25,7 @@
     <h2>Getting Started</h2>
     To complete the OpenChain Conformance Check, applicants must provide a self-confirmation. The Conformance Check requires you to:
     <ul>
-    <li>Fulfill all requirements set forth in the <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-1.0.pdf">Specification.</a></li>
+    <li>Fulfill all requirements set forth in the <a href="https://wiki.linuxfoundation.org/_media/openchain/openchainspec-current.pdf">Specification.</a></li>
     <li>Create an account by selecting sign-up in the user menu.
     <li>Name a contact person to handle inquiries.</li>
     <li>Have an authorized representative complete the web-based Conformance Check by answering all the questions.</li>
@@ -75,7 +75,7 @@
                     </tr>
                     <tr>
                         <td><input type="checkbox" name="read-terms" id="read-terms" class="ui-widget-content ui-corner-all"></td>
-                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.linuxfoundation.org/terms">Terms of Use</a> and <a href="https://www.linuxfoundation.org/privacy">Privacy Policy</a></label></td>
+                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.openchainproject.org/terms.html">Terms of Use</a> and <a href="https://www.openchainproject.org/privacy.html">Privacy Policy</a></label></td>
                     </tr>
                 </table>
                <!-- Allow form submission with keyboard without duplicating the dialog button -->
