--- a/WebContent/survey.html
+++ b/WebContent/survey.html
@@ -20,7 +20,8 @@
         <h1>OpenChain Self Certification Survey</h1>
     </div>
     <h3>
-        Version <span id="version"></span>
+        Specification Version <span id="specVersion"></span>
+        (Survey Version <span id="surveyVersion"></span>)
     </h3>
     <div id="CertForm">
     <form id="myform"></form>
@@ -76,7 +77,7 @@
                     </tr>
                     <tr>
                         <td><input type="checkbox" name="read-terms" id="read-terms" class="ui-widget-content ui-corner-all"></td>
-                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.linuxfoundation.org/terms">Terms of Use</a> and <a href="https://www.linuxfoundation.org/privacy">Privacy Policy</a></label></td>
+                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.openchainproject.org/terms.html">Terms of Use</a> and <a href="https://www.openchainproject.org/privacy.html">Privacy Policy</a></label></td>
                     </tr>
                 </table>
                <!-- Allow form submission with keyboard without duplicating the dialog button -->
