--- a/WebContent/pwresetsuccess.html
+++ b/WebContent/pwresetsuccess.html
@@ -62,7 +62,7 @@
                     </tr>
                     <tr>
                         <td><input type="checkbox" name="read-terms" id="read-terms" class="ui-widget-content ui-corner-all"></td>
-                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.linuxfoundation.org/terms">Terms of Use</a> and <a href="https://www.linuxfoundation.org/privacy">Privacy Policy</a></label></td>
+                        <td><label for="read-terms">I agree to the Linux Foundation <a href="https://www.openchainproject.org/terms.html">Terms of Use</a> and <a href="https://www.openchainproject.org/privacy.html">Privacy Policy</a></label></td>
                     </tr>
                 </table>
                <!-- Allow form submission with keyboard without duplicating the dialog button -->
